# veil-bridge

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  README.md
circuits/: commitment.circom  merkleTree.circom  package-lock.json  package.json  withdraw.circom
circuits/scripts/: compile.sh  export-verifier.sh  setup.sh
client/: package-lock.json  package.json  tsconfig.json
client/src/: abi.ts  claim.ts  deployPoseidon.ts  deposit.ts  genFixture.ts  genNote.ts  merkleTree.ts  note.ts  poseidon.ts  proof.ts  shims.d.ts
contracts-qie/: foundry.toml
contracts-qie/broadcast/DeployQie.s.sol/1983/: run-1780496435946.json  run-1780506267144.json  run-1780507532247.json  run-1781807191226.json  run-1781818635995.json  run-1781860016151.json  run-1781890793042.json  run-1781892986330.json  run-1781893294626.json
contracts-qie/script/: DeployQie.s.sol
contracts-qie/src/: BridgeUpdater.sol  ShieldedPool.sol  WrappedToken.sol
contracts-qie/src/libraries/: BridgePublicValues.sol
contracts-qie/src/mocks/: MockWithdrawVerifier.sol
contracts-qie/src/verifiers/: IWithdrawVerifier.sol  WithdrawVerifier.sol
contracts-qie/test/: Bridge.t.sol  WithdrawProof.t.sol
contracts-qie/test/fixtures/: withdraw_fixture.json
contracts-source/: foundry.toml
contracts-source/broadcast/DeploySource.s.sol/11155111/: run-1780496431508.json  run-1780506263089.json  run-1780507500670.json  run-1781807188740.json  (+5 more)
contracts-source/script/: DeploySource.s.sol
contracts-source/src/: IHasher.sol  MerkleTreeWithHistory.sol  ShieldedVault.sol
contracts-source/src/mocks/: MockERC20.sol  MockHasher.sol
contracts-source/test/: ShieldedVault.t.sol
docs/: ARCHITECTURE.md  FUNDING.md  TRUST_MODEL.md  USAGE.md
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  types.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/claim/: page.tsx
frontend/app/deposit/: page.tsx
frontend/app/docs/: page.tsx
frontend/components/: BackdropFX.tsx  ConfigWarning.tsx  ConnectButton.tsx  CopyField.tsx  Modal.tsx  Nav.tsx  NetworkGuard.tsx  Stepper.tsx
frontend/e2e/: bridge.spec.ts  wallet.ts
frontend/lib/: bridgeStore.tsx  chains.ts  contracts.ts  merkleTree.ts  note.ts  poseidon.ts  proof.ts  wagmi.ts
frontend/public/circuits/: withdraw.wasm
relayer/: Cargo.toml
relayer/src/: config.rs  contracts.rs  main.rs  prover.rs  store.rs  watcher.rs
scripts/: deploy_testnet.sh  e2e_local.sh  run_local.sh  test_frontend_e2e.sh  test_testnet_e2e.sh
sp1-program/: Cargo.toml
sp1-program/bridge-core/: Cargo.toml
sp1-program/bridge-core/src/: lib.rs
sp1-program/program/: Cargo.toml
sp1-program/program/src/: main.rs
(+2 files in other folders)
