[package]
name = "qie-bridge-relayer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Off-chain Rust relayer for the QIE ZK Privacy Bridge"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
bridge-core = { path = "../sp1-program/bridge-core" }

alloy = { version = "0.8", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-types",
    "signers",
    "signer-local",
    "sol-types",
    "rlp",
] }
alloy-trie = { version = "0.7", default-features = false }

tokio = { version = "1", features = ["full"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hex = "0.4"

# Real SP1 proving. Off by default so the relayer builds and runs (in mock mode)
# without the Succinct toolchain. Enable with `--features sp1`.
sp1-sdk = { version = "4.1.0", optional = true }

[features]
default = []
sp1 = ["dep:sp1-sdk"]
